refactor to use Langchain

--- a/infra/azure/function_app/requirements.txt
+++ b/infra/azure/function_app/requirements.txt
@@ -1,4 +1,7 @@
 openai>1.0.0
 azure-search-documents
-azure-identity
 azure-functions
+langchain>=0.2.0
+langchain-community
+azure-core
+langchain_openai
